@@ -11,6 +11,7 @@ Anton Altaparmakov <aia21@cantab.net>
 Albert D. Cahalan <acahalan@cs.uml.edu>
 Russ Christensen <rchriste@cs.utah.edu>
 Matthew J. Fanto <fanto1mj@cmich.edu>
+Christophe Grenier <grenier@cgsecurity.org>
 Ian Jackson <ian@davenant.greenend.org.uk>
 Jan Kratochvil <project-captive@jankratochvil.net>
 Lode Leroy <lode.leroy@barco.com>
