@@ -167,8 +167,8 @@ AC_SUBST(AUTODIRS)
 AC_HEADER_STDC
 AC_CHECK_HEADERS([fcntl.h libintl.h limits.h locale.h mntent.h stddef.h \
 	stdint.h stdlib.h stdio.h stdarg.h string.h strings.h errno.h time.h \
-	sys/ioctl.h sys/mount.h unistd.h utime.h wchar.h getopt.h sys/stat.h \
-	sys/types.h asm/byteorder.h linux/major.h linux/fd.h])
+	endian.h byteswap.h sys/ioctl.h sys/mount.h unistd.h utime.h wchar.h \
+	getopt.h sys/stat.h sys/types.h linux/major.h linux/fd.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_HEADER_STDBOOL
@@ -192,7 +192,7 @@ AC_FUNC_STRFTIME
 AC_FUNC_UTIME_NULL
 AC_FUNC_VPRINTF
 AC_CHECK_FUNCS([atexit fdatasync hasmntopt memmove memset regcomp setlocale \
-	strcasecmp strchr strdup strerror strtol strtoul utime])
+	strcasecmp strchr strdup strerror strtol strtoul utime mbsinit])
 
 # Makefiles to be created by configure.
 AC_CONFIG_FILES([
